<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
	<LinearLayout
	    android:orientation="horizontal" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	   <TextView
	      android:text="@string/fullname_label"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:textStyle="bold"/>
	   <TextView
	      android:text="@string/colon"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:textStyle="bold"
	      android:paddingRight="5dp"/>
	   <TextView
	      android:id="@+id/lastname_text"
	      android:text="@string/lastname_label"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"/>
	   <TextView
	      android:text="@string/comma"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:paddingRight="5dp"/>
	   <TextView
	      android:id="@+id/firstname_text"
	      android:text="@string/firstname_label"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"/>
	</LinearLayout>
	
	<LinearLayout
	    android:orientation="horizontal" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	   <TextView
	      android:text="@string/gender_label"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:textStyle="bold"/>
	   <TextView
	      android:text="@string/colon"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:textStyle="bold"
	      android:paddingRight="5dp"/>
	   <TextView
	      android:id="@+id/gender_text"
	      android:text="@string/male_label"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"/>
	</LinearLayout>
	
	<LinearLayout
	    android:orientation="horizontal" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	   <TextView
	      android:text="@string/check_box_label"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:textStyle="bold"/>
	   <TextView
	      android:text="@string/colon"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:textStyle="bold"
	      android:paddingRight="5dp"/>
	   <TextView
	      android:id="@+id/check_box_text"
	      android:text="@string/yes_label"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"/>
	</LinearLayout>
	
	<LinearLayout
	    android:orientation="horizontal" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	   <TextView
	      android:text="@string/country_name"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:textStyle="bold"/>
	   <TextView
	      android:text="@string/colon"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:textStyle="bold"
	      android:paddingRight="5dp"/>
	   <TextView
	      android:id="@+id/country_text"
	      android:text="@string/country_name"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"/>
	</LinearLayout>
</LinearLayout>