<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:paddingLeft="8dp"
  android:paddingRight="8dp">
  
  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <TextView
      android:text="@string/firstname_label" 
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingRight="8dip"/>
    <EditText
      android:id="@+id/firstname_edit"
      android:inputType="text"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" />
  </LinearLayout>
  
  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <TextView
      android:text="@string/lastname_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingRight="8dip"/>
    <EditText
      android:id="@+id/lastname_edit"
      android:inputType="text"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" />
  </LinearLayout>
  
  <RadioGroup
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <RadioButton
      android:text="@string/male_label"
      android:id="@+id/male_radio"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>
    <RadioButton
      android:text="@string/female_label"
      android:id="@+id/female_radio"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>
  </RadioGroup>
  
  <LinearLayout 
    android:orientation="horizontal" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content">
	<CheckBox 
	  android:text="@string/check_box_label"
	  android:id="@+id/check_box_text" 
	  android:layout_width="wrap_content" 
	  android:layout_height="wrap_content" />
  </LinearLayout>
  
  <LinearLayout 
    android:orientation="horizontal" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content">
	<TextView
      android:text="@string/country_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingRight="5dip"/>
	<Spinner 
	  android:id="@+id/spinner1" 
	  android:layout_width="fill_parent" 
	  android:layout_height="wrap_content" 
	  android:entries="@array/country_array" 
	  android:prompt="@string/country_label"/>
  </LinearLayout>
  
  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <Button
      android:id="@+id/ok_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/ok_label"
      android:onClick="onOKButtonClick"/>
     <Button
      android:id="@+id/clear_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/clear_label"
      android:onClick="onClearButtonClick"/>
     <Button
      android:id="@+id/list_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/list_label"
      android:onClick="onListButtonClick"/>
  </LinearLayout>
</LinearLayout>

